# block-game

./: .gitignore  CMakeLists.txt  Makefile  README.txt  main.c
include/: log.h
include/windows/: message.h  window.h  windows-base.h
lib/: main.c
src/: log.c  log.h  main.c  window.c
src/windows/: main.c  message.c  window.c
